[package]
name = "data_structures_problems"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data_structures = { path = "../data_structures"}
colored = "2.0.0"

[[bin]]
name = "list_stats"
path = "src/list_stats.rs"

[[bin]]
name = "list_partition"
path = "src/list_partition.rs"

[[bin]]
name = "eval"
path = "src/eval.rs"

[[bin]]
name = "maze"
path = "src/maze.rs"